# harnessmonkey

./: .gitignore  CHANGELOG.md  LICENSE  README.md  WINDOWS.md  pyproject.toml
examples/: art_package_emitter.py
examples/capybara-onsen-generator/: README.md  capture_frame.py  compile.py  generate_package.py  onsen-data.json  paint_scene.py  translate_to_windows.py  water_sim.py
examples/heraldic-dragons-generator/: README.md  capture_frame.py  compile_v13.py  dragon_v13.py  generate_package.py  paint_scene_v13.py
examples/threejs-sidebar-sidecar/: README.md  package-lock.json
options/capybara-onsen-threejs-sidecar/: README.md  option.json
scripts/: generate_icons.py  win_spike_driver.py
src/harnessmonkey/: cli.py  (+21 more)
tests/: builder_fixtures.py  conftest.py  fixtures.py  fixtures_bun.py  fixtures_pe.py  harnessmonkey_binary.py  test_authorization.py  test_binary_format.py  test_binary_inspect.py  test_builder_progress.py  test_builder_v15.py  test_builder_v3_reports.py  test_bun_graph.py  test_capybara_onsen.py  test_capybara_onsen_win.py  test_cli.py  test_cli_install.py  test_cli_json_contracts.py  test_cli_progress_contract.py  test_cli_v15.py  test_cli_v3_packages.py  test_codex_work_drawer_package.py  test_config_prompts.py  test_config_v3.py  test_drawer_dock_faithful_spike_port.py  test_drawer_dock_package.py  test_generator_parity.py  test_gui_app.py  test_gui_commands.py  test_gui_controller.py  test_gui_progress_dialog.py  test_gui_progress_model.py  test_gui_settings_window.py  test_gui_tray.py  test_gui_window_model.py  test_heraldic_dragons.py  test_hidden_context_drawer_package.py  test_icons.py  test_install.py  test_install_progress.py  (+38 more)
(+14 files in other folders)
